k8s/applications/utils/matrix-authentication-service/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: matrix-authentication-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: matrix-authentication-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
