k8s/applications/utils/matrix-authentication-service/SecurityPolicy.yaml
# Cross namespace attachment?
# - https://github.com/envoyproxy/gateway/issues/5143
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: allow-all-http
  namespace: matrix-authentication-service
spec:
  targetRefs:
    - {group: gateway.networking.k8s.io, kind: HTTPRoute, name: web}
  # authorization: {defaultAction: Allow}
  extAuth:
    failOpen: false
    grpc: {backendRefs: [{group: '', kind: Service, namespace: envoy-gateway-system, name: envoy-proxy-bouncer-karlsenfr, port: 8080}]}
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: adminapi-local-only
  namespace: matrix-authentication-service
spec:
  targetRefs:
    - {group: gateway.networking.k8s.io, kind: HTTPRoute, name: adminapi}
  authorization:
    defaultAction: Deny
    rules:
      - name: allow-local
        action: Allow
        principal: {clientCIDRs: [192.168.0.0/16, 172.16.0.0/12, 10.0.0.0/8, fd00::/8]}
